<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.nwags.BetaBot.ConnectionSettingsFragment"
        android:title="@string/prefs_connection"
        android:summary="@string/prefs_summ_connection" > 
    </header>
    <header
        android:fragment="com.nwags.BetaBot.MotorSettingsFragment"
        android:title="@string/prefs_motor"
        android:summary="@string/prefs_summ_motor" >
    </header>
    <header
        android:fragment="com.nwags.BetaBot.AxisSettingsFragment"
    	android:title="@string/prefs_axis"
    	android:summary="@string/prefs_summ_axis" >
    </header>
    <header
        android:fragment="com.nwags.BetaBot.SystemSettingsFragment"
    	android:title="@string/prefs_system"
    	android:summary="@string/prefs_summ_system" >
    </header>
</preference-headers>
