<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <Preference
    	android:title="@string/prefs_connection"
    	android:summary="@string/prefs_summ_connection" >
       <!--  <intent
            android:targetPackage="com.nwags.BetaBot"
            adnroid:targetClass="com.nwags.BetaBot.SettingsActivity"
            android:action="com.nwags.BetaBot.PREFS_CONNECTION" >
            </intent>   -->
    </Preference>
    <Preference
        android:title="@string/prefs_motor"
        android:summary="@string/prefs_summ_motor" >
        <intent
            android:targetPackage="com.nwags.BetaBot"
            android:targetClass="com.nwags.BetaBot.SettingsActivity"
            android:action="com.nwags.BetaBot.PREFS_MOTOR" >
            </intent>
    </Preference>
	<Preference
        android:title="@string/prefs_axis"
        android:summary="@string/prefs_summ_axis" >
	    <intent
	        android:targetPackage="com.nwags.BetaBot"
	        android:targetClass="com.nwags.BetaBot.SettingsActivity"
	        android:action="com.nwags.BetaBot.PREFS_AXIS" >
	    </intent>
    </Preference>
    <Preference
        android:title="@string/prefs_system"
        android:summary="@string/prefs_summ_system" >
	    <intent
	        android:targetPackage="com.nwags.BetaBot"
	        android:targetClass="com.nwags.BetaBot.SettingsActivity"
	        android:action="com.nwags.BetaBot.PREFS_SYSTEM" >
	    </intent>
    </Preference>
</PreferenceScreen>
