<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    android:orientation="vertical" 
    android:id="@id/relativeLayout01" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  	xmlns:android="http://schemas.android.com/apk/res/android">
    
    <LinearLayout 
        android:orientation="vertical" 
        android:id="@id/fdLinearLayoutList" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true">
        
        <LinearLayout 
            android:orientation="vertical" 
            android:id="@id/fdLinearLayoutSelect" 
            android:paddingLeft="10.0dip" 
            android:paddingRight="10.0dip" 
            android:paddingBottom="5.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true">
            
            <LinearLayout 
                android:orientation="horizontal" 
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent">
                
                <Button 
                    android:id="@id/fdButtonNew" 
                    android:layout_width="0.0dip" 
                    android:layout_height="wrap_content" 
                    android:text="@string/nnew" 
                    android:layout_weight="0.3"
                    android:background="@drawable/green_button" />
                
                <Button 
                    android:id="@+id/fdButtonSelect" 
                    android:layout_width="0.0dip" 
                    android:layout_height="wrap_content" 
                    android:text="@string/select" 
                    android:layout_weight="0.7"
                    android:background="@drawable/blue_button" />
                
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout 
            android:orientation="vertical" 
            android:id="@id/fdLinearLayoutCreate" 
            android:paddingLeft="10.0dip" 
            android:paddingRight="10.0dip" 
            android:paddingBottom="5.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true">
            
            <TextView 
                android:id="@id/textViewFilename" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/file_name" />
            
            <EditText 
                android:id="@id/fdEditTextFile" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="" />
            
            <LinearLayout 
                android:orientation="horizontal" 
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent" >
                
                <Button 
                    android:id="@id/fdButtonCancel" 
                    android:layout_width="0.0dip" 
                    android:layout_height="wrap_content" 
                    android:text="@string/cancel" 
                    android:layout_weight="0.3"
                    android:background="@drawable/yellow_button" />
                
                <Button 
                    android:id="@id/fdButtonCreate" 
                    android:layout_width="0.0dip" 
                    android:layout_height="wrap_content" 
                    android:text="@string/create" 
                    android:layout_weight="0.7"
                    android:background="@drawable/blue_button" />
                
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:layout_above="@id/fdLinearLayoutList">
        
        <TextView 
            android:id="@id/path" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" />
        
        <ListView 
            android:id="@android:id/list" 
            android:choiceMode="singleChoice"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
             />
        <TextView 
            android:id="@android:id/empty" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            android:text="@string/no_data" />
    </LinearLayout>
</RelativeLayout>