<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceScreen
    	android:key="button_motor1_category_key"
        android:title="@string/motor1"
        android:persistent="false">
        <ListPreference
            android:entries="@array/axisArray"
            android:title="Map to Axis"
            android:key="1ma"
            android:summary="%s"
            android:defaultValue="0"
            android:dialogTitle="Axis"
            android:entryValues="@array/axisArrayValues" />
        <com.nwags.BetaBot.MyEditTextPreference
            android:title="Microsteps"
            android:key="1mi"
            android:summary="%s"
            android:defaultValue="8"
            android:dialogTitle="Microsteps"
            android:dialogMessage="Microsteps"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Travel/rev"
            android:key="1tr"
            android:summary="%s"
            android:defaultValue="36.54"
            android:dialogTitle="Travel/rev"
            android:dialogMessage="Travel/rev"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Step angle"
            android:key="1sa"
            android:summary="%s"
            android:defaultValue="1.8"
            android:dialogTitle="Step angle"
            android:dialogMessage="Step angle"
            android:inputType="number" />
        <SwitchPreference
            android:key="1po"
            android:title="Polarity"
            android:summary=""
            android:defaultValue="false" />
        <SwitchPreference
             android:key="1pm"
             android:title="Power Mgmt"
             android:summary=""
             android:defaultValue="false" />
    </PreferenceScreen>
        
    <PreferenceScreen
    	android:key="button_motor2_category_key"
        android:title="@string/motor2"
        android:persistent="false">
        <ListPreference
            android:entries="@array/axisArray"
            android:title="Map to Axis"
            android:key="2ma"
            android:summary="%s"
            android:defaultValue="1"
            android:dialogTitle="Axis"
            android:entryValues="@array/axisArrayValues" />
        <com.nwags.BetaBot.MyEditTextPreference
            android:title="Microsteps"
            android:key="2mi"
            android:summary="%s"
            android:defaultValue="8"
            android:dialogTitle="Microsteps"
            android:dialogMessage="Microsteps"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Travel/rev"
            android:key="2tr"
            android:summary="%s"
            android:defaultValue="36.54"
            android:dialogTitle="Travel/rev"
            android:dialogMessage="Travel/rev"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Step angle"
            android:key="2sa"
            android:summary="%s"
            android:defaultValue="1.8"
            android:dialogTitle="Step angle"
            android:dialogMessage="Step angle"
            android:inputType="number" />
        <SwitchPreference
            android:key="2po"
            android:title="Polarity"
            android:summary=""
            android:defaultValue="true" />
        <SwitchPreference
             android:key="2pm"
             android:title="Power Mgmt"
             android:summary=""
             android:defaultValue="false" />
    </PreferenceScreen>
    
	<PreferenceScreen
    	android:key="button_motor3_category_key"
        android:title="@string/motor3"
        android:persistent="false">
        <ListPreference
            android:entries="@array/axisArray"
            android:title="Map to Axis"
            android:key="3ma"
            android:summary="%s"
            android:defaultValue="2"
            android:dialogTitle="Axis"
            android:entryValues="@array/axisArrayValues" />
        <com.nwags.BetaBot.MyEditTextPreference
            android:title="Microsteps"
            android:key="3mi"
            android:summary="%s"
            android:defaultValue="8"
            android:dialogTitle="Microsteps"
            android:dialogMessage="Microsteps"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Travel/rev"
            android:key="3tr"
            android:summary="%s"
            android:defaultValue="8.1"
            android:dialogTitle="Travel/rev"
            android:dialogMessage="Travel/rev"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Step angle"
            android:key="3sa"
            android:summary="%s"
            android:defaultValue="1.8"
            android:dialogTitle="Step angle"
            android:dialogMessage="Step angle"
            android:inputType="number" />
        <SwitchPreference
            android:key="3po"
            android:title="Polarity"
            android:summary=""
            android:defaultValue="true" />
        <SwitchPreference
             android:key="3pm"
             android:title="Power Mgmt"
             android:summary=""
             android:defaultValue="true" />
    </PreferenceScreen>
    
	<PreferenceScreen
    	android:key="button_motor4_category_key"
        android:title="@string/motor4"
        android:persistent="false">
        <ListPreference
            android:entries="@array/axisArray"
            android:title="Map to Axis"
            android:key="4ma"
            android:summary="%s"
            android:defaultValue="3"
            android:dialogTitle="Axis"
            android:entryValues="@array/axisArrayValues" />
        <com.nwags.BetaBot.MyEditTextPreference
            android:title="Microsteps"
            android:key="4mi"
            android:summary="%s"
            android:defaultValue="8"
            android:dialogTitle="Microsteps"
            android:dialogMessage="Microsteps"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Travel/rev"
            android:key="4tr"
            android:summary="%s"
            android:defaultValue="360"
            android:dialogTitle="Travel/rev"
            android:dialogMessage="Travel/rev"
            android:inputType="number" />
        <com.nwags.BetaBot.MyEditFloatTextPreference
            android:title="Step angle"
            android:key="4sa"
            android:summary="%s"
            android:defaultValue="1.8"
            android:dialogTitle="Step angle"
            android:dialogMessage="Step angle"
            android:inputType="number" />
        <SwitchPreference
            android:key="4po"
            android:title="Polarity"
            android:summary=""
            android:defaultValue="true" />
        <SwitchPreference
             android:key="4pm"
             android:title="Power Mgmt"
             android:summary=""
             android:defaultValue="true" />
    </PreferenceScreen>
    
</PreferenceScreen>
